--- a/src/components/ImageGenerator.css
+++ b/src/components/ImageGenerator.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url('peaceful-blur-background-1x-1920x1080.jpg');
+    background-image: url('https://images.hdqwalls.com/download/peaceful-blur-background-1x-1920x1080.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
